# projd

./: .gitignore  AGENTS.md  CODEX_KICKOFF_PROMPT.md  Cargo.toml  README.md  mise.toml  projd-spec.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
crates/proj/: Cargo.toml
crates/proj-tui/: Cargo.toml
crates/proj-tui/src/: main.rs
crates/proj/src/: main.rs
crates/projd/: Cargo.toml
crates/projd-types/: Cargo.toml
crates/projd-types/src/: client.rs  lib.rs
crates/projd/src/: main.rs
crates/projd/tests/: niri_workflow.rs  runtime_workflow.rs
crates/projd/web/: app.js  index.html  style.css
docs/: architecture.excalidraw
examples/full-suite/: README.md
examples/full-suite/app-suite/: .project.toml
examples/full-suite/app-suite/scripts/: agent-indexer.sh  editor-open.sh  server.sh  terminal-dev.sh
examples/full-suite/dep-service/: .project.toml
examples/full-suite/dep-service/scripts/: server.sh
scripts/: bootstrap-mise.sh  cargo-safe.sh  install.sh
